<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="play_list" translatable="false">Playlist maker</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="media" translatable="false">Медиатека</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="night_theme" translatable="false">Темная тема</string>
    <string name="share" translatable="false">Поделиться приложением</string>
    <string name="support" translatable="false">Написать в поддержку</string>
    <string name="agreement" translatable="false">Пользовательское соглашение</string>

    <string name="share_message" translatable="false">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="share_message_extra_subject" translatable="false">Пользовательское соглашение</string>
    <string name="share_message_extra_intent" translatable="false">Пользовательское соглашение</string>

    <string name="email" translatable="false">FatefulCost@yandex.ru</string>
    <string name="email_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email_chose" translatable="false">Выберите почтовый клиент</string>
    <string name="email_error" translatable="false">Почтовое приложение не найдено. Установите email клиент.</string>

    <string name="terms_url" translatable="false">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="terms_error" translatable="false">Браузер не найден. Установите браузер из Play Store</string>

    <string name="search_empty" translatable="false">Ничего не нашлось</string>
    <string name="search_loading" translatable="false">Загрузка...</string>
    <string name="search_placeholder" translatable="false">Пример текста</string>
    <string name="retry" translatable="false">Обновить</string>

    <string name="search_history" translatable="false">Вы искали</string>
    <string name="clear_history" translatable="false">Очистить историю</string>

    <string name="name_of_track" translatable="false">Название трека</string>
    <string name="name_of_singer" translatable="false">Имя исполнителя</string>
    <string name="duration" translatable="false">Длительность</string>
    <string name="collection" translatable="false">Альбом</string>
    <string name="name_of_collection" translatable="false">Название альбома</string>
    <string name="year" translatable="false">Год</string>
    <string name="genre" translatable="false">Жанр</string>
    <string name="name_of_genre" translatable="false">Название жанра</string>
    <string name="country" translatable="false">Страна</string>
    <string name="name_of_country" translatable="false">Название страны</string>

    <string name="play" translatable="false">Воспроизвести</string>
    <string name="pause" translatable="false">Пауза</string>

    <string name="media_library" translatable="false">Медиатека</string>
    <string name="back" translatable="false">Назад</string>

    <string name="playlists_tab" translatable="false">Плейлисты</string>
    <string name="favorites_tab" translatable="false">Избранные треки</string>

    <string name="create_new_playlist" translatable="false">Новый плейлист</string>
    <string name="no_playlists_yet" translatable="false">Вы не создали ни одного плейлиста</string>

    <string name="no_favorites_yet" translatable="false">Ваша медиатека пуста</string>

    <string name="new_playlist" translatable="false">Новый плейлист</string>
    <string name="create" translatable="false">Создать</string>
    <string name="playlist_name" translatable="false">Название*</string>
    <string name="playlist_description" translatable="false">Описание</string>
    <string name="playlist_created" translatable="false">Плейлист %s создан</string>
    <string name="exit_creation_title" translatable="false">Завершить создание плейлиста?</string>
    <string name="exit_creation_message" translatable="false">Все несохраненные данные будут потеряны</string>
    <string name="complete" translatable="false">Завершить</string>
    <string name="cancel" translatable="false">Отмена</string>

    <string name="playlist_name_in_list" translatable="false">Название плейлиста</string>
    <string name="track_count" translatable="false">0 треков</string>

    <string name="add_to_playlist" translatable="false">Добавить в плейлист</string>
    <string name="track_added_to_playlist" translatable="false">Добавлено в плейлист %s</string>
    <string name="track_already_in_playlist" translatable="false">Трек уже добавлен в плейлист %s</string>

    <string name="total_duration" translatable="false">Общая длительность</string>
    <string name="delete_playlist_title" translatable="false">Удалить плейлист</string>
    <string name="delete_playlist_confirmation" translatable="false">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="edit" translatable="false">Редактировать</string>
    <string name="edit_playlist" translatable="false">Редактировать</string>
    <string name="save" translatable="false">Сохранить</string>
    <string name="delete" translatable="false">Удалить</string>
    <string name="delete_track_title" translatable="false">Удалить трек</string>
    <string name="delete_track_confirmation" translatable="false">Хотите удалить трек?</string>
    <string name="yes" translatable="false">Да</string>
    <string name="no" translatable="false">Нет</string>
    <string name="no_tracks_in_playlist" translatable="false">В этом плейлисте нет треков</string>
    <string name="share_playlist_empty" translatable="false">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_updated" translatable="false">Плейлист обновлен</string>
    <string name="playlist_deleted" translatable="false">Плейлист удален</string>
    <string name="track_removed_from_playlist" translatable="false">Трек удален из плейлиста</string>
    <string name="menu_share" translatable="false">Поделиться</string>
    <string name="menu_edit" translatable="false">Редактировать информацию</string>
    <string name="menu_delete" translatable="false">Удалить плейлист</string>
    <string name="tracks_list" translatable="false">Список треков</string>

</resources>

