<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground_color"
    android:orientation="vertical"
    android:layout_weight="1"
    android:gravity="center"
    android:paddingLeft="@dimen/padding_left_and_right"
    android:paddingRight="@dimen/padding_left_and_right"
    android:paddingBottom="28dp">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="40dp"
        app:title="@string/play_list"
        style="@style/CustomToolbarStyle"

        >

    </com.google.android.material.appbar.MaterialToolbar>

        <Button
            android:id="@+id/button1"
            android:text="@string/search"
            app:icon="@drawable/vector_lupa"
            style="@style/ButtonStyle"/>

        <Button
            android:id="@+id/button2"
            android:text="@string/media"
            app:icon="@drawable/vector"
            style="@style/ButtonStyle"/>

        <Button
            android:id="@+id/button3"
            android:text="@string/settings"
            app:icon="@drawable/group"
            style="@style/ButtonStyle"
            />

    </LinearLayout>