<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.activity.SettingsActivity"
    android:id="@+id/settings_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/back_ground_color_settings"
    >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/settings"
        app:navigationIcon="@drawable/arrow"
        style="@style/CustomToolbarStyleSettings">

    </com.google.android.material.appbar.MaterialToolbar>


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/night_theme"
        android:textSize="@dimen/text_size_settings"
        android:fontFamily="@font/ys_display_regular"
        app:thumbTint="@color/switch_circle_color"
        app:trackTint="@color/switch_line_color" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextInSettings"
            android:id="@+id/shareAppText"
            android:clickable="true"
            android:text="@string/share"
            android:paddingEnd="16dp"
            app:drawableEndCompat="@drawable/vector_share" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextInSettings"
            android:id="@+id/supportText"
            android:clickable="true"
            android:text="@string/support"
            android:paddingEnd="12dp"
            app:drawableEndCompat="@drawable/support" />
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextInSettings"
            android:id="@+id/termsText"
            android:clickable="true"
            android:text="@string/agreement"
            android:paddingEnd="18dp"
            app:drawableEndCompat="@drawable/arrow_right" />
    </FrameLayout>

</LinearLayout>


