<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/back_ground_color_settings"
    android:paddingTop="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <!-- Индикатор (полоска сверху) -->
    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/song_details_color"
        android:layout_marginBottom="16dp" />

    <!-- Заголовок -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_playlist"
        android:textSize="19sp"
        android:textColor="@color/history_text_color"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <!-- Кнопка "Новый плейлист" -->
    <Button
        android:id="@+id/btn_create_new_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/create_new_playlist"
        android:textAllCaps="false"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        style="@style/ButtonStyleCreatePlaylist"
        android:backgroundTint="@color/new_playlist_button"/>

    <!-- Список плейлистов -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlistsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:maxHeight="300dp"
        android:visibility="gone"
        android:paddingTop="16dp"/>

    <!-- Пустое состояние -->
    <LinearLayout
        android:id="@+id/emptyStateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingVertical="32dp"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_playlists_yet"
            android:textSize="16sp"
            android:textColor="@color/song_details_color"
            android:fontFamily="@font/ys_display_regular" />

    </LinearLayout>

</LinearLayout>